--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Y5 web site</title>
+    <title>Y5</title>
 
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Y5" />
